# louvain-community-detection

./: CMakeLists.txt  Makefile  aggregation.cu  aggregation.cuh  louvian.py  main.cu  modularity.cu  modularity.cuh  utils.cu  utils.cuh
tests/: bcsstk16.mtx
